tests/ui/diagnostic-width/long-E0308.unicode.stderr
error[E0308]: mismatched types
   в•ӯв–ё $DIR/long-E0308.rs:45:9
   в”Ӯ
LL в”Ӯ        let x: Atype<
   в”Ӯ в”Ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ
LL в”Ӯ в”Ӯ        Btype<
LL в”Ӯ в”Ӯ          Ctype<
LL в”Ӯ в”Ӯ            Atype<
   вҖЎ в”Ӯ
LL в”Ӯ в”Ӯ        i32
LL в”Ӯ в”Ӯ      > = Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(OвҖҰ
   в”Ӯ в”Ӯв”Ҹв”Ғв”Ғв”Ғв”Ғв”Ғв”Ӯв”Ғв”Ғв”Ғв”ӣ
   в”Ӯ в””в”ғв”Җв”Җв”Җв”Җв”Җв”Ө
   в”Ӯ  в”ғ     expected due to this
LL в”Ӯ  в”ғ         Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(OвҖҰ
LL в”Ӯ  в”ғ             Ok("")
LL в”Ӯ  в”ғ         ))))))))))))))))))))))))))))))
LL в”Ӯ  в”ғ     ))))))))))))))))))))))))))))));
   в”Ӯ  в”—в”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”ӣ expected `Atype<Btype<Ctype<_, i32>, i32>, i32>`, found `Result<Result<Result<_, _>, _>, _>`
   в”Ӯ
   в”ң note: expected struct `b::Aty..., i32>`
   в”Ӯ            found enum `Result..._>, _>`
   в”ң note: the full name for the type has been written to '$TEST_BUILD_DIR/long-E0308.long-type-$LONG_TYPE_HASH.txt'
   в•° note: consider using `--verbose` to print the full type name to the console

error[E0308]: mismatched types
   в•ӯв–ё $DIR/long-E0308.rs:58:26
   в”Ӯ
LL в”Ӯ       ))))))))))))))))) == Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(вҖҰ
   в”Ӯ в”Ҹв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”ӣ
LL в”Ӯ в”ғ         Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(OkвҖҰ
LL в”Ӯ в”ғ             Ok(Ok(Ok(Ok(Ok(Ok(Ok("")))))))
LL в”Ӯ в”ғ         ))))))))))))))))))))))))))))))
LL в”Ӯ в”ғ     ))))))))))))))))))))))));
   в”Ӯ в”—в”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”ӣ expected `Option<Result<Option<Option<_>>, _>>`, found `Result<Result<Result<_, _>, _>, _>`
   в”Ӯ
   в”ң note: expected enum `Option<Result<Option...>>>>>>, _>>`
   в”Ӯ          found enum `Result<Result..._>, _>, _>`
   в”ң note: the full name for the type has been written to '$TEST_BUILD_DIR/long-E0308.long-type-$LONG_TYPE_HASH.txt'
   в•° note: consider using `--verbose` to print the full type name to the console

error[E0308]: mismatched types
   в•ӯв–ё $DIR/long-E0308.rs:89:9
   в”Ӯ
LL в”Ӯ       let x: Atype<
   в”Ӯ в”Ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ
LL в”Ӯ в”Ӯ       Btype<
LL в”Ӯ в”Ӯ         Ctype<
LL в”Ӯ в”Ӯ           Atype<
   вҖЎ в”Ӯ
LL в”Ӯ в”Ӯ       i32
LL в”Ӯ в”Ӯ     > = ();
   в”Ӯ в”Ӯ     в”Ӯ   в”Ғв”Ғ expected `Atype<Btype<Ctype<_, i32>, i32>, i32>`, found `()`
   в”Ӯ в””в”Җв”Җв”Җв”Җв”Җв”Ө
   в”Ӯ       expected due to this
   в”Ӯ
   в”ң note: expected struct `Atype<Btype<_, i32>, i32>`
   в”Ӯ       found unit type `()`
   в”ң note: the full name for the type has been written to '$TEST_BUILD_DIR/long-E0308.long-type-$LONG_TYPE_HASH.txt'
   в•° note: consider using `--verbose` to print the full type name to the console

error[E0308]: mismatched types
   в•ӯв–ё $DIR/long-E0308.rs:92:17
   в”Ӯ
LL в”Ӯ       let _: () = Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(вҖҰ
   в”Ӯ в”Ҹв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”¬в”Җв”Ғв”Ғв”Ғв”ӣ
   в”Ӯ в”ғ            в”Ӯ
   в”Ӯ в”ғ            expected due to this
LL в”Ӯ в”ғ         Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(Ok(OkвҖҰ
LL в”Ӯ в”ғ             Ok(Ok(Ok(Ok(Ok(Ok(Ok("")))))))
LL в”Ӯ в”ғ         ))))))))))))))))))))))))))))))
LL в”Ӯ в”ғ     ))))))))))))))))))))))));
   в”Ӯ в”—в”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”Ғв”ӣ expected `()`, found `Result<Result<Result<_, _>, _>, _>`
   в”Ӯ
   в”ң note: expected unit type `()`
   в”Ӯ               found enum `Result<Result<_, _>, _>`
   в”ң note: the full name for the type has been written to '$TEST_BUILD_DIR/long-E0308.long-type-$LONG_TYPE_HASH.txt'
   в•° note: consider using `--verbose` to print the full type name to the console

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
